--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,14 +24,10 @@ jobs:
         with:
           python-version: "3.9"
 
-      - name: Install requires
-        run: python -m pip install twine wheel
-
-      - name: Build source package
-        run: python setup.py sdist
+      - name: Install poetry
+        run: python -m pip install poetry
 
       - name: Publishing to pypi
-        run: twine upload --skip-existing --disable-progress-bar dist/*.tar.gz
+        run: poetry publish --build
         env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
