--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,10 +27,12 @@ jobs:
       - name: Install poetry
         run: python -m pip install poetry
 
-      - name: Publishing to pypi
-        run: poetry publish --build
-        env:
-          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+      - name: Read Poetry TOML
+        uses: SebRollen/toml-action@v1.0.2
+        id: read_toml
+        with:
+          file: 'pyproject.toml'
+          field: 'tool.poetry.version'
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -54,3 +56,8 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:${{ steps.read_toml.outputs.value }}
             ghcr.io/${{ github.repository }}:latest
+
+      - name: Publishing to pypi
+        run: poetry publish --build
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
